--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -502,3 +502,26 @@ footer > div {
       font-size: 0.75rem;
    }
 }
+
+/* Style the scrollbar track */
+::-webkit-scrollbar {
+   width: 14px; /* Width of the scrollbar */
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+   background-color: var(--secondary-color); 
+   border-radius: 10px; 
+   border: 4px solid transparent;
+   background-clip: content-box; 
+}
+
+/* Style the scrollbar track */
+::-webkit-scrollbar-track {
+   background-color: var(--primary-color);
+}
+
+/* Style the scrollbar corner */
+::-webkit-scrollbar-corner {
+   background-color: var(--primary-color);
+}
