--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -188,7 +188,7 @@
       <section class="items-list">
          <%- include('partials/bookCard-search', { book: {
             cover: 'assets/images/placeholder.png',
-            title: 'Test tes test',
+            title: 'Test tes test test test test test',
             author: 'Test test',
             price: 20.00,} 
          }) %>
