--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -30,8 +30,8 @@
                    </svg>
                </button>
             </li>
-            <li><a href="/login" class="button-primary"> Sign In </a></li>
-            <li><a href="/register" class="button-primary"> Sign Up </a></li>
+            <li><a href="/signin" class="button-primary"> Sign In </a></li>
+            <li><a href="/signup" class="button-primary"> Sign Up </a></li>
          </ul>
       </nav>
    </header>
