Added cart page (shipping info still needs styling and whole page needs front functionality) added wishlist page no styling just router

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
                </button>
             </li>
             <li>
-               <a href="/bookmarks"> 
+               <a href="/wishlist"> 
                   <img src="assets/svg/bookmark.svg" alt="bookmark icon" class="icon">
                </a>
             </li>
