Finished visual part of cart page and pasted it to wishlist page (need some tweaking later)

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 <footer>
    <div>
-      <h3> NFTrade </h3>
+      <h3> HavenTrade </h3>
       <a href="https://www.instagram.com"> Instagram </a>
       <a href="https://www.x.com"> Twitter </a>
       <a href="https://www.discord.com"> Discord </a>
    </div>
-   <p> &copy; BookHaven 2020</p>
+   <p> &copy; BookHaven 2025</p>
 </footer>
