--- a/public/styles/cartPage.css
+++ b/public/styles/cartPage.css
@@ -2,7 +2,6 @@ body {
    height: 100vh;
    display: grid;
    grid-template-rows: auto 1fr auto;
-   overflow: hidden;
 }
 
 main {
@@ -10,6 +9,7 @@ main {
    width: 100%;
    display: grid;
    grid-template-columns: 6fr 3fr;
+   grid-template-rows: 1fr;
    gap: 1.5rem;
    padding: 2rem 0;
 }
@@ -66,6 +66,12 @@ main {
    flex-direction: column;
    overflow-y: scroll;
    margin-right: -1rem;
+}
+
+@media screen and (min-width: 1921px) {
+   .cart-items {
+      max-height: 700px;
+   }
 }
 
 .cart-item {
@@ -157,7 +163,7 @@ main {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    justify-self: end;
-   gap:.5rem;
+   gap:.25rem;
 
 }
 
@@ -176,4 +182,111 @@ main {
    border-top: 1px solid var(--text-color);
    padding-top: .5rem;
    font-size: 1.5rem;
+}
+
+.shipping-info {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+}
+
+.shipping-info > div:not(.shipping-info-row) {
+   display: flex;
+   flex-direction: column;
+   gap: .5rem;
+}
+
+.shipping-info > div:not(.shipping-info-row) > label {
+   font-weight: 600;
+   font-size: 1.25rem;
+}
+
+.shipping-info-row {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 1rem;
+}
+
+.shipping-info-row > div {
+   display: flex;
+   flex-direction: column;
+   gap: .5rem;
+}
+
+.shipping-info-row > div > label {
+   font-weight: 600;
+   font-size: 1.25rem;
+}
+
+.shipping-info input {
+   padding: .5rem;
+   font-size: 1rem;
+   border-radius: .5rem;
+   background-color: var(--accent-color);
+   border: none;
+   outline: none;
+   color: var(--text-color)
+}
+
+.shipping-info-checkbox {
+   display: flex;
+   flex-direction: row !important;
+   align-items: center;
+   gap: .5rem;
+   padding-top: 1rem;
+   font-size: 1.25rem;
+}
+
+.shipping-info > button {
+   background-color: var(--secondary-color);
+}
+
+.shipping-info > button:hover {
+   background-color: var(--background-color);
+}
+
+.shipping-info > button:disabled {
+   background-color: var(--accent-color);
+}
+
+.custom-checkbox {
+   position: absolute;
+   opacity: 0;
+   cursor: pointer;
+}
+
+.custom-checkbox + label {
+   position: relative;
+   padding-left: 2rem;
+   cursor: pointer;
+   user-select: none;
+}
+
+.custom-checkbox + label::before {
+   content: "";
+   position: absolute;
+   left: 0;
+   top: 50%;
+   transform: translateY(-50%);
+   width: 1rem;
+   height: 1rem;
+   border: 2px solid var(--secondary-color);
+   border-radius: .25rem;
+   background-color: var(--primary-color);
+   transition: background-color 0.2s ease, border-color 0.3s ease;
+}
+
+.custom-checkbox:checked + label::before {
+   background-color: var(--secondary-color);
+   border-color: var(--secondary-color);
+}
+
+.custom-checkbox:checked + label::after {
+   position: absolute;
+   left: 0.25rem;
+   top: 50%;
+   transform: translateY(-50%);
+   color: var(--text-color);
+   font-size: 0.75rem;
+   font-weight: bold;
 }
